force-app/main/default/objects/Health_Provider__c/Health_Provider__c.object-meta.xml
<CustomObject>
    <description>This entity is used to store the hospital&apos;s details fetched from HB.</description>
    <label>Health Provider</label>
    <nameField>
        <label>Provider Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Health Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>