force-app/main/default/objects/Health_Provider__c/fields/Admin_contact_person__c.field-meta.xml
<CustomField>
    <fullName>Admin_contact_person__c</fullName>
    <description>ABHIL</description>
    <label>Admin contact person</label>
    <length>100</length>
    <type>Text</type>
</CustomField>