force-app/main/default/objects/Health_Provider__c/fields/Admin_Email__c.field-meta.xml
<CustomField>
    <fullName>Admin_Email__c</fullName>
    <description>ABHIL</description>
    <label>Admin Email</label>
    <type>Email</type>
</CustomField>