force-app/main/default/objects/Health_Provider__c/fields/Admin_Landline_Number__c.field-meta.xml
<CustomField>
    <fullName>Admin_Landline_Number__c</fullName>
    <description>ABHIL</description>
    <label>Admin Landline Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>