force-app/main/default/objects/Health_Provider__c/fields/Admin_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Admin_Mobile_Number__c</fullName>
    <label>Admin Mobile Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>