force-app/main/default/objects/Health_Provider__c/fields/Alternate_Phone__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Phone__c</fullName>
    <label>Alternate Phone</label>
    <length>200</length>
    <type>Text</type>
</CustomField>