force-app/main/default/objects/Health_Provider__c/fields/Correspondence_Address3__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_Address3__c</fullName>
    <label>Correspondence Address3</label>
    <length>200</length>
    <type>Text</type>
</CustomField>