force-app/main/default/objects/Health_Provider__c/fields/Correspondence_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_Address_1__c</fullName>
    <description>ABHIL</description>
    <label>Correspondence Address 1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>