force-app/main/default/objects/Health_Provider__c/fields/Correspondence_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_Address_2__c</fullName>
    <description>ABHIL</description>
    <label>Correspondence Address 2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>