force-app/main/default/objects/Health_Provider__c/fields/Correspondence_City__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_City__c</fullName>
    <label>Correspondence City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>