force-app/main/default/objects/Health_Provider__c/fields/Correspondence_District__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_District__c</fullName>
    <description>ABHIL</description>
    <label>Correspondence District</label>
    <length>100</length>
    <type>Text</type>
</CustomField>