force-app/main/default/objects/Health_Provider__c/fields/Correspondence_Pin__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_Pin__c</fullName>
    <description>ABHIL</description>
    <label>Correspondence Pin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>