force-app/main/default/objects/Health_Provider__c/fields/Correspondence_State__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_State__c</fullName>
    <label>Correspondence State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>