force-app/main/default/objects/Health_Provider__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <description>ABHI</description>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Health Provider</fullName>
                <default>true</default>
                <label>Health Provider</label>
            </value>
            <value>
                <fullName>Group Customer</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Member Customer</fullName>
            </value>
            <value>
                <fullName>Dependent Customer</fullName>
            </value>
            <value>
                <fullName>Retail Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>