force-app/main/default/objects/Health_Provider__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>ABHIL</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>