force-app/main/default/objects/Health_Provider__c/fields/IRDA_Code__c.field-meta.xml
<CustomField>
    <fullName>IRDA_Code__c</fullName>
    <description>ABHIL</description>
    <label>IRDA Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>