force-app/main/default/objects/Health_Provider__c/fields/Last_updated_date__c.field-meta.xml
<CustomField>
    <fullName>Last_updated_date__c</fullName>
    <label>Last updated date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>