force-app/main/default/objects/Health_Provider__c/fields/Marketing_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Contact_Person__c</fullName>
    <description>ABHIL</description>
    <label>Marketing Contact Person</label>
    <length>100</length>
    <type>Text</type>
</CustomField>