force-app/main/default/objects/Health_Provider__c/fields/Marketing_Email__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Email__c</fullName>
    <description>ABHIL</description>
    <label>Marketing Email</label>
    <type>Email</type>
</CustomField>