force-app/main/default/objects/Health_Provider__c/fields/Marketing_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Mobile_Number__c</fullName>
    <description>ABHIL</description>
    <label>Marketing Mobile Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>