force-app/main/default/objects/Health_Provider__c/fields/Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Mobile_No__c</fullName>
    <description>ABHIL</description>
    <label>Mobile No</label>
    <length>200</length>
    <type>Text</type>
</CustomField>