force-app/main/default/objects/Health_Provider__c/fields/Network_Status__c.field-meta.xml
<CustomField>
    <fullName>Network_Status__c</fullName>
    <description>ABHIL</description>
    <label>Network Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>In Network</fullName>
            </value>
            <value>
                <fullName>ItemOut Of Network</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>