force-app/main/default/objects/Health_Provider__c/fields/Network_Type__c.field-meta.xml
<CustomField>
    <fullName>Network_Type__c</fullName>
    <description>ABHI</description>
    <label>Network Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Rural</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>