force-app/main/default/objects/Health_Provider__c/fields/Permanent_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Address_2__c</fullName>
    <description>ABHIL</description>
    <label>Permanent Address 2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>