force-app/main/default/objects/Health_Provider__c/fields/Permanent_Address_3__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Address_3__c</fullName>
    <description>ABHIL</description>
    <label>Permanent Address 3</label>
    <length>200</length>
    <type>Text</type>
</CustomField>