force-app/main/default/objects/Health_Provider__c/fields/Permanent_City__c.field-meta.xml
<CustomField>
    <fullName>Permanent_City__c</fullName>
    <description>ABHIL</description>
    <label>Permanent City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>