force-app/main/default/objects/Health_Provider__c/fields/Permanent_country__c.field-meta.xml
<CustomField>
    <fullName>Permanent_country__c</fullName>
    <description>ABHIL</description>
    <label>Permanent country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>