force-app/main/default/objects/Health_Provider__c/fields/Permanent_State__c.field-meta.xml
<CustomField>
    <fullName>Permanent_State__c</fullName>
    <description>ABHIL</description>
    <label>Permanent State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>