force-app/main/default/objects/Health_Provider__c/fields/Provider_Affiliated__c.field-meta.xml
<CustomField>
    <fullName>Provider_Affiliated__c</fullName>
    <label>Provider Affiliated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>