force-app/main/default/objects/Health_Provider__c/fields/Provider_BlackListed__c.field-meta.xml
<CustomField>
    <fullName>Provider_BlackListed__c</fullName>
    <label>Provider BlackListed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>