force-app/main/default/objects/Health_Provider__c/fields/Provider_Code__c.field-meta.xml
<CustomField>
    <fullName>Provider_Code__c</fullName>
    <description>ABHIL</description>
    <externalId>true</externalId>
    <label>Provider Code</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>