force-app/main/default/objects/Health_Provider__c/fields/Provider_Landline_No__c.field-meta.xml
<CustomField>
    <fullName>Provider_Landline_No__c</fullName>
    <description>ABHIL</description>
    <label>Provider Landline No</label>
    <length>200</length>
    <type>Text</type>
</CustomField>