force-app/main/default/objects/Health_Provider__c/fields/Provider_Network__c.field-meta.xml
<CustomField>
    <fullName>Provider_Network__c</fullName>
    <label>Provider Network</label>
    <length>255</length>
    <type>Text</type>
</CustomField>