force-app/main/default/objects/Health_Provider__c/fields/Provider_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Provider_Specialty__c</fullName>
    <label>Provider Specialty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>