force-app/main/default/objects/Health_Provider__c/fields/Provider_Status__c.field-meta.xml
<CustomField>
    <fullName>Provider_Status__c</fullName>
    <description>ABHI</description>
    <label>Provider Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>100000000: Active</fullName>
            </value>
            <value>
                <fullName>100000001: Inactive</fullName>
            </value>
            <value>
                <fullName>100000002: Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>