force-app/main/default/objects/Health_Provider__c/fields/Provider_type__c.field-meta.xml
<CustomField>
    <fullName>Provider_type__c</fullName>
    <description>ABHIL</description>
    <label>Provider type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>