force-app/main/default/objects/Health_Provider__c/fields/Provider_Website__c.field-meta.xml
<CustomField>
    <fullName>Provider_Website__c</fullName>
    <description>ABHIL</description>
    <label>Provider Website</label>
    <type>Url</type>
</CustomField>