force-app/main/default/objects/Health_Provider__c/fields/Rohini_Code__c.field-meta.xml
<CustomField>
    <fullName>Rohini_Code__c</fullName>
    <description>ABHIL</description>
    <label>Rohini Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>