force-app/main/default/objects/Health_Provider__c/fields/Search_Health__c.field-meta.xml
<CustomField>
    <fullName>Complaint_RCA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <description>This is field where we are carrying multiple complaint fields for reference to user</description>
    <label>Search Health</label>
    <type>AutoNumber</type>
</CustomField>