force-app/main/default/objects/Health_Provider__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>ABHIL</description>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>