force-app/main/default/objects/Health_Provider__c/fields/TPA_Contact_Designation__c.field-meta.xml
<CustomField>
    <fullName>TPA_Contact_Designation__c</fullName>
    <description>ABHIL</description>
    <label>TPA Contact Designation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>