force-app/main/default/objects/Health_Provider__c/fields/TPA_Email__c.field-meta.xml
<CustomField>
    <fullName>TPA_Email__c</fullName>
    <description>ABHIL</description>
    <label>TPA Email</label>
    <type>Email</type>
</CustomField>