force-app/main/default/objects/Health_Provider__c/fields/TPA_Landline_Number__c.field-meta.xml
<CustomField>
    <fullName>TPA_Landline_Number__c</fullName>
    <description>ABHIL</description>
    <label>TPA Landline Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>